--- a/assets/AssetManifest.json
+++ b/assets/AssetManifest.json
@@ -1,1 +1,1 @@
-{"assets/loading.gif":["assets/loading.gif"],"assets/sa.png":["assets/sa.png"],"assets/uk.png":["assets/uk.png"],"packages/cupertino_icons/assets/CupertinoIcons.ttf":["packages/cupertino_icons/assets/CupertinoIcons.ttf"]}
+{"assets/error_image.png":["assets/error_image.png"],"assets/loading.gif":["assets/loading.gif"],"assets/sa.png":["assets/sa.png"],"assets/uk.png":["assets/uk.png"],"packages/cupertino_icons/assets/CupertinoIcons.ttf":["packages/cupertino_icons/assets/CupertinoIcons.ttf"]}
